k8s/inventario-completo.yaml
# ======================
# Namespace
# ======================
apiVersion: v1
kind: Namespace
metadata:
  name: inventario-dev

---
# ======================
# MySQL Service
# ======================
apiVersion: v1
kind: Service
metadata:
  name: inventario-mysql-service
  namespace: inventario-dev

spec:
  clusterIP: None
  selector:
    app: mysql-inventario

  ports:
    - port: 3306
      targetPort: 3306

---
# ======================
# StatefulSet MySQL
# ======================
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: inventario-mysql
  namespace: inventario-dev

spec:
  serviceName: inventario-mysql-service
  replicas: 1

  selector:
    matchLabels:
      app: mysql-inventario

  template:
    metadata:
      labels:
        app: mysql-inventario

    spec:
      containers:
      - name: mysql
        image: mysql:8.0

        ports:
        - containerPort: 3306

        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql

  volumeClaimTemplates:
  - metadata:
      name: mysql-storage

    spec:
      storageClassName: ebs-sc
      accessModes: ["ReadWriteOnce"]

      resources:
        requests:
          storage: 1Gi

---
# ======================
# Deployment App
# ======================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventario-app-deployment
  namespace: inventario-dev

spec:
  replicas: 2

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: inventario-app

  template:
    metadata:
      labels:
        app: inventario-app

      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "9091"

    spec:
      containers:
      - name: inventario-app-container
        image: 058006295553.dkr.ecr.us-east-1.amazonaws.com/inventario-app:latest

        ports:
        - containerPort: 8080
        - containerPort: 9091

        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"
---
# ======================
# Service App
# ======================
apiVersion: v1
kind: Service
metadata:
  name: inventario-app-service
  namespace: inventario-dev

spec:
  selector:
    app: inventario-app

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP

---
# ======================
# Ingress
# ======================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventario-app-ingress
  namespace: inventario-dev

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: inventario-app-service
            port:
              number: 80
